--- a/Exercises/RecurTutor/recw21PROG.html
+++ b/Exercises/RecurTutor/recw21PROG.html
@@ -12,9 +12,10 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
   <style>
+   #problemarea { height: 650px;}
     #codeTextarea{
-      width:400px;
-      height:150px;
+      width:500px;
+      height:260px;
     }
     .textAreaWithLines{
       font-family:courier;      
@@ -24,7 +25,7 @@
     .textAreaWithLines textarea,.textAreaWithLines div{
       border:0px;
       line-height:120%;
-      height:200px;
+      height:260px;
       font-size:12px;
     }
     .lineObj{
@@ -49,8 +50,8 @@
       el.className='textAreaWithLines';
       ta.style.position = 'absolute';
       ta.style.left = '30px';
-      var currHeight=200;
-      var currWidth=400;
+      var currHeight=260;
+      var currWidth=500;
       console.log(navigator.appCodeName);
        if ($.browser.mozilla) //if (navigator.appCodeName== "Mozilla" )
        {
@@ -115,6 +116,9 @@ Spherical objects, such as cannonballs, can be stacked to form a pyramid with on
 
 <textarea  id="codeTextarea">int Cannonball(int height){
 		
+
+
+
 
 
 
