--- a/Exercises/RecurTutor/recw24PROG.html
+++ b/Exercises/RecurTutor/recw24PROG.html
@@ -13,8 +13,8 @@
   <script src="../../lib/odsaStyle-min.css"></script>
   <style>
     #codeTextarea{
-      width:400px;
-      height:200px;
+      width:500px;
+      height:300px;
     }
     .textAreaWithLines{
       font-family:courier;      
@@ -24,7 +24,7 @@
     .textAreaWithLines textarea,.textAreaWithLines div{
       border:0px;
       line-height:120%;
-      height:200px;
+      height:270px;
       font-size:12px;
     }
     .lineObj{
@@ -49,8 +49,8 @@
       el.className='textAreaWithLines';
       ta.style.position = 'absolute';
       ta.style.left = '30px';
-      var currHeight=200;
-      var currWidth=400;
+      var currHeight=270;
+      var currWidth=500;
       console.log(navigator.appCodeName);
        if ($.browser.mozilla) //if (navigator.appCodeName== "Mozilla" )
        {
@@ -113,9 +113,14 @@
  <br />
 </h4>
 
-<textarea  id="codeTextarea"> 
-int minOps (int x, int y)
+<textarea  id="codeTextarea">int minOps (int x, int y)
 {
+
+
+
+
+
+
 
 
 }
