--- a/Exercises/RecurTutor/recw25PROG.html
+++ b/Exercises/RecurTutor/recw25PROG.html
@@ -13,8 +13,8 @@
   <script src="../../lib/odsaStyle-min.css"></script>
   <style>
     #codeTextarea{
-      width:400px;
-      height:200px;
+      width:500px;
+      height:270px;
     }
     .textAreaWithLines{
       font-family:courier;      
@@ -49,8 +49,8 @@
       el.className='textAreaWithLines';
       ta.style.position = 'absolute';
       ta.style.left = '30px';
-      var currHeight=200;
-      var currWidth=400;
+      var currHeight=270;
+      var currWidth=500;
       console.log(navigator.appCodeName);
        if ($.browser.mozilla) //if (navigator.appCodeName== "Mozilla" )
        {
@@ -113,8 +113,7 @@
  <br />
 </h4>
 
-<textarea  id="codeTextarea"> 
-boolean isSubsetSum(int set[], int n, int sum)
+<textarea  id="codeTextarea">boolean isSubsetSum(int set[], int n, int sum)
 {		
 
 
