--- a/Exercises/RecurTutor/recw31PROG.html
+++ b/Exercises/RecurTutor/recw31PROG.html
@@ -13,9 +13,10 @@
 
   <script src="../../lib/odsaStyle-min.css"></script>
   <style>
+   #problemarea { height: 850px;}
     #codeTextarea{
-      width:550px;
-      height:200px;
+      width:500px;
+      height:270px;
     }
     .textAreaWithLines{
       font-family:courier;      
@@ -25,7 +26,7 @@
     .textAreaWithLines textarea,.textAreaWithLines div{
       border:0px;
       line-height:120%;
-      height:200px;
+      height:270px;
       font-size:12px;
     }
     .lineObj{
@@ -50,8 +51,8 @@
       el.className='textAreaWithLines';
       ta.style.position = 'absolute';
       ta.style.left = '30px';
-      var currHeight=300;
-      var currWidth=400;
+      var currHeight=270;
+      var currWidth=500;
       console.log(navigator.appCodeName);
        if ($.browser.mozilla) //if (navigator.appCodeName== "Mozilla" )
        {
@@ -110,12 +111,13 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test"> 
+Old merchants measured many commodities using weights and a two-pan balancea practice that continues in many parts of the world today. If you are using a limited set of weights, however, you can only measure certain quantities accurately. For example, suppose that you have only	two weights: a 1-ounce weight and a 3-ounce weight. With these you can	easily measure out 4 ounces. You can also measure out 2 ounces by shifting the 1-ounce weight to the other side. determines whether it is possible to measure out the desired target amount with a given set of weights. The available weights are stored in a vector Weight. Each weight in the vector can be either: Put on the opposite side of the balance from the sample, put on the same side of the balance as the sample, or Left off the balance	entirely. For example, suppose that you have only two weights: a 1-ounce weight and a 3-ounce weight. With these you can easily measure out 4 ounces. It is somewhat more interesting to discover that you can also measure out  2 ounces by shifting the 1-ounce weight to the other side 2 ounces by shifting the 1-ounce weight to the other side. 
+
 Given the following recursive function signature, write the function code such that this function find out if a certain target weight can be measured or not<br />
 <p align ="center"> <img src= "../../RST/Images/oldmerch1.png" width="220" height="80"> 
 <img src= "../../RST/Images/oldmerch2.png" width="220" height="80"> </p>
 <textarea  id="codeTextarea">boolean RecIsMeasurable(int target, Vector<Integer> weights, int index)
 {
-
 
 
 
