Adjusted the heights of the Tracing exercises

--- a/Exercises/RecurTutor/rectFIB2rc5.html
+++ b/Exercises/RecurTutor/rectFIB2rc5.html
@@ -6,6 +6,9 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
+  <style> 
+   #problemarea { height: 800px;}
+  </style>
 </head>
  
 <body>
