--- a/AV/Development/redBlackTreePRO.html
+++ b/AV/Development/redBlackTreePRO.html
@@ -59,7 +59,7 @@
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
-  <script src="../../JSAV/extras/AVLextension.js"></script>
+  <script src="../DS/AVLextension.js"></script>
   <script src="../../JSAV/extras/redblacktree.js"></script>
   <script src="../../JSAV/extras/stack.js"></script>
   <script src="../../lib/odsaUtils-min.js"></script>
