--- a/AV/Development/rotationPRO.html
+++ b/AV/Development/rotationPRO.html
@@ -42,7 +42,7 @@
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
-  <script src="../../JSAV/extras/AVLextension.js"></script>
+  <script src="../DS/AVLextension.js"></script>
   <script src="../../lib/odsaUtils-min.js"></script>
   <script src="../../lib/odsaAV-min.js"></script>
   <script src="BinaryPointerTree.js"></script>
