--- a/AV/Sorting/heapsortPRO.html
+++ b/AV/Sorting/heapsortPRO.html
@@ -41,7 +41,7 @@
     <script src="../../JSAV/lib/jquery.transit.js"></script>
     <script src="../../JSAV/lib/raphael.js"></script>
     <script src="../../JSAV/build/JSAV-min.js"></script>
-    <script src="../../JSAV/extras/binaryheap.js"></script>
+    <script src="../DS/binaryheap.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="heapsortPRO.js"></script>
