--- a/AV/Development/redBlackTreePRO.html
+++ b/AV/Development/redBlackTreePRO.html
@@ -60,7 +60,7 @@
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
   <script src="../DS/AVLextension.js"></script>
-  <script src="../../JSAV/extras/redblacktree.js"></script>
+  <script src="../DS/redblacktree.js"></script>
   <script src="../../JSAV/extras/stack.js"></script>
   <script src="../../lib/odsaUtils-min.js"></script>
   <script src="../../lib/odsaAV-min.js"></script>
