--- a/AV/Development/ArrayTreeTest.html
+++ b/AV/Development/ArrayTreeTest.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="ArrayTree.css" type="text/css" />
+  <link rel="stylesheet" href="../DS/ArrayTree.css" type="text/css" />
 
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
@@ -14,7 +14,7 @@
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="../../lib/odsaUtils-min.js"></script>
   <script src="../../lib/odsaAV-min.js"></script>
-  <script src="ArrayTree.js"></script>
+  <script src="../DS/ArrayTree.js"></script>
 </head>
 
 <body>
