--- a/AV/Development/AVLinsertPRO.html
+++ b/AV/Development/AVLinsertPRO.html
@@ -26,7 +26,7 @@
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
-  <script src="../DS/AVLextension.js"></script>
+  <script src="../../DataStructures/AVLextension.js"></script>
   <script src="../../JSAV/extras/stack.js"></script>
   <script src="../../lib/odsaUtils-min.js"></script>
   <script src="../../lib/odsaAV-min.js"></script>
