--- a/AV/Development/AVLtreeRotationPRO.html
+++ b/AV/Development/AVLtreeRotationPRO.html
@@ -30,7 +30,7 @@
         <script src="../../JSAV/lib/jquery.transit.js"></script>
         <script src="../../JSAV/lib/raphael.js"></script>
         <script src="../../JSAV/build/JSAV.js"></script>
-        <script src="../DS/AVLextension.js"></script>
+        <script src="../../DataStructures/AVLextension.js"></script>
         <script>
 
         var initialArray = [],
