--- a/AV/Development/PrimAVPQ.html
+++ b/AV/Development/PrimAVPQ.html
@@ -44,7 +44,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="../DS/binaryheap.js"></script>
+<script src="../../DataStructures/binaryheap.js"></script>
 <script src="PrimAVPQ.js"></script>
 </body>
 </html>
