--- a/AV/Development/QuickSortAverageCaseAnalysis.html
+++ b/AV/Development/QuickSortAverageCaseAnalysis.html
@@ -41,7 +41,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
-<script src="../DS/binaryheap.js"></script>
+<script src="../../DataStructures/binaryheap.js"></script>
 <script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script src="QuickSortAverageCaseAnalysis.js"></script>
 </body>
