--- a/AV/Development/externalReplacementSelectionPRO.html
+++ b/AV/Development/externalReplacementSelectionPRO.html
@@ -52,7 +52,7 @@
 <script src="../../JSAV/lib/jquery.transit.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="../DS/binaryheap.js"></script>
+<script src="../../DataStructures/binaryheap.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
     <script src="ClickHandler.js"></script>
