--- a/AV/Development/graphDFSPE.html
+++ b/AV/Development/graphDFSPE.html
@@ -45,7 +45,7 @@
     <script src="../../JSAV/lib/jquery.transit.js"></script>
     <script src="../../JSAV/lib/raphael.js"></script>
     <script src="../../JSAV/build/JSAV-min.js"></script>
-    <script src="../DS/binaryheap.js"></script>
+    <script src="../../DataStructures/binaryheap.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphDFSPE.js"></script>
