Fixed heapremovePRO bug which prevented clicking the decrement button in atend mode.

--- a/AV/Binary/heapremovePRO.html
+++ b/AV/Binary/heapremovePRO.html
@@ -27,7 +27,7 @@
       </p>
       <p align="center">
         <input id="decrement" type="button" name="decrement" />
-        <span class="jsavscore"></span>
+        <span class="jsavscore">&nbsp;</span>
       </p>
 
       <div id="av" class="jsavcanvas">
