--- a/Exercises/RecurTutor/recw22PROG.html
+++ b/Exercises/RecurTutor/recw22PROG.html
@@ -11,28 +11,10 @@
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
-   <script src="../../lib/ExAreaPROG.js"> </script>
+  <script src="../../lib/ExAreaPROG.js"> </script>
+  <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
    <style>
    #problemarea { height: 500px;}
-    #codeTextarea{
-      width:500px;
-      height:300px;
-    }
-    .textAreaWithLines{
-      font-family:courier;      
-      border:1px solid #000;
-      
-    }
-    .textAreaWithLines textarea,.textAreaWithLines div{
-      border:0px;
-      line-height:120%;
-      height:300px;
-      font-size:12px;
-    }
-    .lineObj{
-      color: #787878 ;
-      background-color: #E8E8E8;
-    }
   </style>
 </head>
 <body>
