--- a/Exercises/RecurTutor/recw23PROG.html
+++ b/Exercises/RecurTutor/recw23PROG.html
@@ -13,6 +13,7 @@
 
   <script src="../../lib/odsaStyle-min.css"></script>
   <script src="../../lib/ExAreaPROG.js"> </script>
+  <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
   <style>
 #problemarea { height: 550px;}
     #codeTextarea{
