--- a/Exercises/RecurTutor/recwbca2PROG.html
+++ b/Exercises/RecurTutor/recwbca2PROG.html
@@ -13,27 +13,7 @@
 
   <script src="../../lib/odsaStyle-min.css"></script>
   <script src="../../lib/ExAreaPROG.js"> </script>
-  <style>
-    #codeTextarea{
-      width:500px;
-      height:270px;
-    }
-    .textAreaWithLines{
-      font-family:courier;      
-      border:1px solid #000;
-      
-    }
-    .textAreaWithLines textarea,.textAreaWithLines div{
-      border:0px;
-      line-height:120%;
-      height:200px;
-      font-size:12px;
-    }
-    .lineObj{
-      color: #787878 ;
-      background-color: #E8E8E8;
-    }
-  </style>
+  <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
 </head>
 <body>
   
