Fixed a few bugs in interpolationSearchPRO. Made the instructions clearer.

--- a/AV/Development/interpolationSearchPRO.html
+++ b/AV/Development/interpolationSearchPRO.html
@@ -13,6 +13,14 @@
     .jsavbararray .jsavnode {
       width: 35px;
     }
+    .jsavcanvas {
+      height: 250px !important;
+      max-height: 250px !important;
+    }
+    .jsavcanvas svg {
+      z-index: 101;
+      height: 262px;
+    }
     .returnbox {
       width: 400px;
       text-align: center;
