Remove lib/.htaccess

--- a/lib/faq.html
+++ b/lib/faq.html
@@ -11,12 +11,13 @@
 OpenDSA FAQ
 </h1>
 
-<p><b>Server cannot be contacted error</b>
+<p><b>If you see a message saying that "server cannot be contacted", or if you
+see an exercise that shows "__ out of __" above it.</b>
 </p>
 
 Try the following:</br>
 
-<p>The first step is to clear the browser cache, and reload the page.</p>
+<p>The first step is to clear the browser cache, and then reload the page.</p>
       <ul>
 
       <li> On Chrome, open the settings menu and click "History", then "Clear
