--- a/AV/Development/graphDFSPE.html
+++ b/AV/Development/graphDFSPE.html
@@ -48,6 +48,7 @@
     <script src="../../DataStructures/binaryheap.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
+    <script src="graphUtils.js"></script>
     <script src="graphDFSPE.js"></script>
   </body>
 </html>
