--- a/AV/Development/graphGenerator.html
+++ b/AV/Development/graphGenerator.html
@@ -15,9 +15,7 @@
       <td class="headerLeft">
         <input type="button" id="help" name="help" value="Help" />
       </td>
-      <td class="headerCenter">
-        <h1>Graph Generator Tool</h1>
-      </td>
+      <td class="headerCenter avTitle">Graph Generator Tool</td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
       </td>
@@ -68,6 +66,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
+<script src="graphUtils.js"></script>
 <script src="graphGenerator.js"></script>
 </body>
 </html>
