Implement insert and find example for 2-3+ tree

--- a/AV/Development/TTPlusTree.html
+++ b/AV/Development/TTPlusTree.html
@@ -11,10 +11,15 @@
 <body>
 <!-- 52 B, 46 X, 33 D, 22 J, 71 M, 65 S-->
 
-<style>
-  #tree {background-color: #E2EEDD;}
-</style>
 <div id="tree">
+  <a class="jsavsettings"></a>
+  <div class="jsavcounter"></div>
+  <div class="jsavcontrols"></div>
+  <div class="jsavoutput jsavline"></div>
+  <div class="jsavcanvas"></div>
+</div>
+
+<div id="find">
   <a class="jsavsettings"></a>
   <div class="jsavcounter"></div>
   <div class="jsavcontrols"></div>
