Added https:// to form actions to suppress console warning message

--- a/RST/_themes/haiku/layout.html
+++ b/RST/_themes/haiku/layout.html
@@ -35,7 +35,7 @@
 <a id="login-link" style="float:right;color:red;margin:10px 20px auto" class="login-link" href="#">{{ login }}</a>
 <div id="login-box" class="login-popup">
   <a href="#" class="close"><img src="_static/Images/close_pop.png" class="btn_close" title="{{ close }}" alt="Close" /></a>
-  <form method="post" class="signin" action="#">
+  <form method="post" class="signin" action="https://#">
     <fieldset class="textbox">
       <label class="username">
         <span>{{ username  }}</span>
@@ -62,7 +62,7 @@
 <a id="registration-link" style="float:right;color:red;margin:10px 20px auto" class="registration-link" href="#">{{ register }}</a>
 <div id="registration-box" class="registration-popup ">
   <a href="#" class="close"><img src="_static/Images/close_pop.png" class="btn_close" title="{{ close }}" alt="{{ close }}" /></a>
-  <form method="post" class="signin" action="#">
+  <form method="post" class="signin" action="https://#">
     <fieldset class="textbox">
       <div id="register_error" class="error"></div>
       <label class="username">
@@ -97,7 +97,7 @@
 <a id="bugreport-link" style="float:right;color:red;margin:10px 20px auto" class="bugreport-link" href="#">{{ report_bug  }}</a>
 <div id="bugreport-box" class="bugreport-popup ">
   <a href="#" class="close"><img src="_static/Images/close_pop.png" class="btn_close" title="{{ close }}" alt="{{ close }}" /></a>
-  <form method="post" class="report" action="#">
+  <form method="post" class="report" action="https://#">
     <fieldset class="textbox">
       <div id="bug_error" class="error"></div>
         <span>{{ summary }}*:</span>
