--- a/Exercises/Development/CompleteBinaryTree.html
+++ b/Exercises/Development/CompleteBinaryTree.html
@@ -12,7 +12,8 @@
 function genAnswer(node, relation) {
   if(relation == "parent") {
     if(node == 0) { return "NONE"; }
-    return (node-1)/2;
+      if(node%2 == 0) { return ((node-1)/2 - .5); }
+      else { return (node-1)/2; }
   } else if(relation == "left child") {
     num = (node*2) + 1;
     if(num > 10) { return "NONE"; }
@@ -32,12 +33,36 @@ function genAnswer(node, relation) {
 }
 </script>
 
+<script>
+function genHint(relation) {
+  if(relation == "parent") {
+    return "To find the parent of node R, calculate <b>(R - 1)/2</b> rounded down.<br>If <b>R = 0</b>, then it has no parent.";
+  } else if(relation == "left child") {
+    return "To find the left child of node R, calculate <b>2R + 1</b>. <br>If <b>2R + 1 <u><</u> N</b>, then R has no left child.";
+  } else if(relation == "right child") {
+    return "To find the right child of node R, calculate <b>2R + 2</b>. <br>If <b>2R + 2 <u><</u> N</b>, then R has no right child.";
+  } else if(relation == "left sibling") {
+    return "To find the left sibling of node R, calculate <b>R - 1</b> if R is even. <br>If R is not even, it has no left sibling.";
+  } else {
+    return "To find the right sibling of node R, calculate <b>R + 1</b> if R is odd, and <b>R + 1 <u><</u> N</b>. <br>If these conditions are not met, R has no right sibling.";
+  }
+}
+</script>
+
+<script>
+function whichNode(chance) {
+  if(chance == 0) { return 0; }
+  else { return 8; }
+}
+</script>
+
 <div class="exercise">
   <div class="vars">
-    <var id="node">randRange(0,11)</var>
+    <var id="node">randRange(0,11)+whichNode(randRange(0,1))</var>
     <var id="relationType">["parent", "left child", "right child", "left sibling", "right sibling"]</var>
     <var id="relation">relationType[randRange(0,4)]</var>
     <var id="ANS">genAnswer(node, relation)</var>
+    <var id="HINT">genHint(relation)</var>
   </div>
   <div class="problems">
     <div id="problem-type-or-description">
@@ -50,6 +75,9 @@ function genAnswer(node, relation) {
         not exist, then type NONE.
       </p>
       <p class="solution" data-type="text"><var>ANS</var></p>
+      <div class="hints">
+         <p><var>HINT</var></p>
+      </div>
     </div>
   </div>
 </div>
