Update CS2114 config

--- a/Exercises/AlgAnal/AlgAnlsFIBsqrt.html
+++ b/Exercises/AlgAnal/AlgAnlsFIBsqrt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math">
+<html data-require="math" "rational">
 <head>
   <title>Algorithm Analysis Exercise: Square Root 2</title>
   <script src="../../lib/jquery.min.js"></script>
