Added height and width data attributes to KA exercises, moved call to loadLangMod() so that it only gets called on module pages since translations are loaded differently for AVs

--- a/Exercises/AlgAnal/AlgAnalSumm.html
+++ b/Exercises/AlgAnal/AlgAnalSumm.html
@@ -7,7 +7,7 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 
-<body>
+<body data-height="850" data-width="950">
   <div class="exercise" data-name="AlgAnlsFIBsmlintgr"></div>
   <div class="exercise" data-name="AlgAnlsFIBsmlintgr2"></div>
   <div class="exercise" data-name="AlgAnlsFIBsqrt"></div>
