--- a/Exercises/AlgAnal/AnalPairSumm.html
+++ b/Exercises/AlgAnal/AnalPairSumm.html
@@ -7,7 +7,7 @@
 <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="AnalPairMCQ1"></div>
   <div class="exercise" data-name="AnalPairMCQ2"></div>
   <div class="exercise" data-name="AnalPairMCQ3"></div>
