--- a/Exercises/Binary/DprobsAll.html
+++ b/Exercises/Binary/DprobsAll.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 
-<body>
+<body data-height="650" data-width="950">
 <script>
 var initJSAV = function () {
   var jsav = new JSAV("jsav");
@@ -43,7 +43,6 @@ var initJSAV = function () {
   </div>
 
 <div class="problems">
-
   <div id="problem-type-or-description-2">
     <div class="vars">
       <var id="ANS">5</var>
@@ -151,20 +150,20 @@ tree have?</p>
     <div class="hints">
       <p>Look carefully at the definition for a binary tree.</p>
       <p>It states that every binary tree is either empty, or it has
-	a root node and two binary trees as children.
+  a root node and two binary trees as children.
       </p>
       <p>So, every binary tree node has two children, but not every
-	binary tree has a node.
+  binary tree has a node.
       </p>
     </div>
-  </div> 
+  </div>
 
   <div id="problem-type-or-description">
     <p class="question">What is the minimum number of nodes in a
       complete binary tree with height 4?
     </p>
     <div class="solution" data-type="text"><var>8</var></div>
-  </div> 
+  </div>
 
   <div id="problem-type-or-description">
     <p class="question">Select the one true statement.</p>
@@ -176,37 +175,37 @@ tree have?</p>
       <li><var>"No binary tree is both complete and full"</var></li>
       <li><var>"None of the above"</var></li>
     </ul>
-  </div> 
+  </div>
 
   <div id="problem-type-or-description">
     <p class="question">What is the minimum number of nodes in a
       full binary tree with height 4?</p>
     <div class="solution" data-type="text"><var>7</var></div>
-  </div> 
+  </div>
 
   <div id="problem-type-or-description">
     <p class="question">Suppose T is a binary tree with 14
       nodes. What is the minimum possible height of T?</p>
     <div class="solution" data-type="text"><var>4</var></div>
-  </div> 
+  </div>
 
     <div id="problem-type-or-description">
       <p class="question">What is the minimum number of internal nodes
       in a binary tree with 8 nodes?</p>
       <div class="solution" data-type="text"><var>4</var></div>
-    </div> 
+    </div>
 
     <div id="problem-type-or-description">
       <p class="question">The n elements in a tree can be visited in:</p>
       <div class="solution"><var><code>\Theta(n)</code> time</var></div>
       <ul class="choices" data-category="true">
-	<li><var><code>\Theta(1)</code> time</var></li>
-	<li><var><code>\Theta(\log n)</code> time</var></li>
-	<li><var><code>\Theta(n)</code> time</var></li>
-	<li><var><code>\Theta(n \log n)</code> time</var></li>
-	<li><var><code>\Theta(n^2)</code> time</var></li>
+        <li><var><code>\Theta(1)</code> time</var></li>
+        <li><var><code>\Theta(\log n)</code> time</var></li>
+        <li><var><code>\Theta(n)</code> time</var></li>
+        <li><var><code>\Theta(n \log n)</code> time</var></li>
+        <li><var><code>\Theta(n^2)</code> time</var></li>
       </ul>
-    </div> 
+    </div>
 </div>
 </div>
 </body>
