--- a/Exercises/Sorting/BubsortSumm.html
+++ b/Exercises/Sorting/BubsortSumm.html
@@ -7,10 +7,10 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 
-<body>
-  <div class="exercise" data-name="BubsortMCQcomplex"></div>  
-  <div class="exercise" data-name="BubsortMCQcomps"></div>  
-  <div class="exercise" data-name="BubsortMCQcost"></div>  
+<body data-height="650" data-width="950">
+  <div class="exercise" data-name="BubsortMCQcomplex"></div>
+  <div class="exercise" data-name="BubsortMCQcomps"></div>
+  <div class="exercise" data-name="BubsortMCQcost"></div>
   <div class="exercise" data-name="BubsortMCQequal"></div>
   <div class="exercise" data-name="BubsortMCQrevsort"></div>
   <div class="exercise" data-name="BubsortMCQsorted"></div>
