--- a/Exercises/AlgAnal/AlgAnalCS2114Summ.html
+++ b/Exercises/AlgAnal/AlgAnalCS2114Summ.html
@@ -7,7 +7,7 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="AlgAnlsMCQalgdfn"></div>
   <div class="exercise" data-name="AlgAnlsMCQbest1"></div>
   <div class="exercise" data-name="AlgAnlsMCQbest2"></div>
