--- a/Exercises/AlgAnal/AnalProgramSumm.html
+++ b/Exercises/AlgAnal/AnalProgramSumm.html
@@ -7,7 +7,7 @@
 <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="AnalProgramMCQtheta"></div>
   <div class="exercise" data-name="AnalProgramMCQtheta2"></div>
   <div class="exercise" data-name="AnalProgramMCQtheta3"></div>
