--- a/Exercises/Binary/TreeOverheadSumm.html
+++ b/Exercises/Binary/TreeOverheadSumm.html
@@ -6,7 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="TreeOverhead1"></div>
   <div class="exercise" data-name="TreeOverhead2"></div>
   <div class="exercise" data-name="TreeOverhead3"></div>
