--- a/Exercises/Hashing/HashAnalSumm.html
+++ b/Exercises/Hashing/HashAnalSumm.html
@@ -6,7 +6,7 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
-<body>
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="HashMCQlinprob"></div>
   <div class="exercise" data-name="HashMCQopenfull"></div>
   <div class="exercise" data-name="HashMCQopen"></div>
