--- a/Exercises/Hashing/HashingLinearStepProbePRO.html
+++ b/Exercises/Hashing/HashingLinearStepProbePRO.html
@@ -18,8 +18,7 @@
     #reset { margin-right: 20px;}
   </style>
 </head>
-
-<body>
+<body data-height="700" data-width="950">
 <script>
 var
   jsav,           // The JSAV object
@@ -88,7 +87,7 @@ var checkAnswer = function() {
 </script>
 
 <div class="exercise">
-    <div class="vars">                
+    <div class="vars">
       <var id="probeStep">randRange(2, 4)</var>
       <var id="hashFunction">"h(k) = k  mod " + arr_size</var>
       <var id="JSAV">initJSAV(probeStep)</var>
@@ -100,12 +99,12 @@ var checkAnswer = function() {
           function <var>hashFunction</var> and handle collisions
           using Linear Probing by Steps with probe function P(K, i) =
           <var>probeStep</var>i.
-        </p>          
-        <p class="question"> 
+        </p>
+        <p class="question">
           In which slot should the record with key
           value <var>currentKey </var> be inserted?
         </p>
-        <input id="reset" type="button" value="Reset" />  
+        <input id="reset" type="button" value="Reset" />
         <div id="jsav"></div>
       <div class="solution" data-type="custom">
         <div class="guess">
@@ -120,11 +119,11 @@ var checkAnswer = function() {
       </div>
       <div class="hints">
         <p>First use the hash function to computer the home slot.</p>
-	<p>If there is a collsion, then just step to the right like
-	  normal linear probing, but step by the step size. For
-	  example, if the step size is 4, go 4 slots to the right.
-	<p>If we reach the end of the array while stepping, then cycle
-	  around to the beginning.</p>
+  <p>If there is a collsion, then just step to the right like
+    normal linear probing, but step by the step size. For
+    example, if the step size is 4, go 4 slots to the right.
+  <p>If we reach the end of the array while stepping, then cycle
+    around to the beginning.</p>
       </div>
     </div>
   </div>
