--- a/Exercises/Sorting/BubsortPRO.html
+++ b/Exercises/Sorting/BubsortPRO.html
@@ -6,7 +6,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Bubble Sort Proficiency Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
@@ -24,8 +24,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
     #reset { margin-right: 20px;}
   </style>
 </head>
-
-<body>
+<body data-height="550" data-width="950">
 <script>
 var
   jsav,           // The JSAV object
@@ -124,7 +123,7 @@ var checkAnswer = function (arr_size) {
            behavior for one iteration of the outer for loop of Bubble Sort.
            Simply click on entries in the array to swap them in the way
            that Bubble Sort would during its first pass.</p>
-        <input id="reset" type="button" value="Reset" />	
+        <input id="reset" type="button" value="Reset" />
         <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
@@ -134,13 +133,13 @@ var checkAnswer = function (arr_size) {
         <div class="validator-function">
           if (!checkAnswer(arr_size) && !guess[0])
             return ""; // User did not click, and correct answer is not
-	               // initial array state
+                 // initial array state
           else return checkAnswer(arr_size);
         </div>
       </div>
       <div class="hints">
         <p>What does Bubble Sort do?</p>
-	<p>Move from left to right through the array.</p>
+        <p>Move from left to right through the array.</p>
         <p>At each position, if the value is greater than the value to
            its right, then swap them.</p>
       </div>
